--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>המצפן הפיננסי</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
@@ -176,6 +177,7 @@
             border-radius: 50%;
             justify-content: center;
             align-items: center;
+            gap: 0; /* Ensures perfect centering */
         }
 
         .btn:hover {
@@ -2645,4 +2647,6 @@
     </script>
 </body>
 </html>
+
+
 
