--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         </div>
 
         <div class="main-grid">
-            <!-- הכנסות -->
             <div class="card income-card">
                 <div class="card-header">
                     <div class="card-title-row">
@@ -71,7 +70,7 @@
                                 <div class="filter-option" data-filter="active" onclick="setFilter('income', 'active')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 11l3 3L22 4"/><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/></svg> תנועות פעילות</div>
                                 <div class="filter-option" data-filter="inactive" onclick="setFilter('income', 'inactive')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg> תנועות לא פעילות</div>
                                 <div class="filter-option" data-filter="regular" onclick="setFilter('income', 'regular')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/></svg> קבועות</div>
-                                <div class="filter-option" data-filter="variable" onclick="setFilter('income', 'variable')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="m19 9-5 5-4-4-3 3"/></svg> משתנות</div>
+                                <div class="filter-option" data-filter="variable" onclick="setFilter('income', 'variable')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="5" width="20" height="14" rx="2"/><line x1="2" y1="10" x2="22" y2="10"/></svg> כרטיס אשראי</div>
                                 <div class="filter-option" data-filter="onetime" onclick="setFilter('income', 'onetime')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg> חד-פעמיות</div>
                             </div>
                         </div>
@@ -95,7 +94,6 @@
                 </div>
             </div>
 
-            <!-- הוצאות -->
             <div class="card expense-card">
                 <div class="card-header">
                     <div class="card-title-row">
@@ -118,7 +116,7 @@
                                 <div class="filter-option" data-filter="active" onclick="setFilter('expense', 'active')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 11l3 3L22 4"/><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/></svg> תנועות פעילות</div>
                                 <div class="filter-option" data-filter="inactive" onclick="setFilter('expense', 'inactive')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg> תנועות לא פעילות</div>
                                 <div class="filter-option" data-filter="regular" onclick="setFilter('expense', 'regular')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/></svg> קבועות</div>
-                                <div class="filter-option" data-filter="variable" onclick="setFilter('expense', 'variable')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="m19 9-5 5-4-4-3 3"/></svg> משתנות</div>
+                                <div class="filter-option" data-filter="variable" onclick="setFilter('expense', 'variable')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="5" width="20" height="14" rx="2"/><line x1="2" y1="10" x2="22" y2="10"/></svg> כרטיס אשראי</div>
                                 <div class="filter-option" data-filter="onetime" onclick="setFilter('expense', 'onetime')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg> חד-פעמיות</div>
                                 <div class="filter-option" data-filter="loan" onclick="setFilter('expense', 'loan')"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><line x1="6" y1="12" x2="18" y2="12"/></svg> הלוואות</div>
                             </div>
@@ -144,7 +142,6 @@
             </div>
         </div>
 
-        <!-- הלוואות -->
         <div class="card loans-summary-card">
             <div class="card-header" style="border-bottom: none; margin-bottom: 0; padding-bottom: 0;">
                  <div class="card-title-row">
@@ -196,7 +193,6 @@
             </div>
         </div>
 
-        <!-- תחזית -->
         <div class="card summary-card">
             <div class="card-header">
                  <div class="card-title-row">
@@ -252,7 +248,6 @@
         </div>
     </div>
 
-    <!-- Modal תנועה -->
     <div class="modal" id="transactionModal">
         <div class="modal-content">
             <div class="modal-header" id="modalTitle">הוספת תנועה</div>
@@ -263,8 +258,8 @@
                     קבוע
                 </div>
                 <div class="type-option" id="typeVariable" onclick="selectTransactionType('variable')">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="m19 9-5 5-4-4-3 3"/></svg>
-                    משתנה
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="5" width="20" height="14" rx="2"/><line x1="2" y1="10" x2="22" y2="10"/></svg>
+                    כרטיס אשראי
                 </div>
                 <div class="type-option" id="typeOnetime" onclick="selectTransactionType('onetime')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
@@ -309,7 +304,6 @@
         </div>
     </div>
 
-    <!-- Modal גרף -->
     <div class="modal" id="chartModal">
         <div class="modal-content">
             <div class="modal-header" id="chartModalTitle">גרף התפלגות</div>
@@ -322,7 +316,6 @@
         </div>
     </div>
 
-    <!-- Modal אישור -->
     <div class="modal" id="confirmModal">
         <div class="modal-content">
             <div class="modal-header" id="confirmModalTitle">אישור פעולה</div>
