--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
                id="currentBalanceInput" 
                placeholder="0.00" 
                step="0.01"
-               oninput="updateSummary()">
+               oninput="updateSummary()"
+               dir="ltr">
         <button class="balance-control-btn" id="incrementBtn" title="הוסף">+</button>
     </div>
     <div class="balance-step-selector" id="balanceStepSelector">
