--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@
         <button class="step-btn" data-step="1000">1000</button>
     </div>
 </div>
-                <div class="summary-row">
-                    <div class="summary-row-label">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="negative" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
-                        עו״ש לאחר הוצאות
-                    </div>
-                    <div class="summary-row-value neutral" id="balanceAfterExpenses">₪0.00</div>
+        <div class="final-summary-grid">
+            <div class="summary-block">
+                <div class="summary-block-label">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="negative" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+                    עו״ש לאחר הוצאות
                 </div>
-
-                <div class="summary-row">
-                    <div class="summary-row-label">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="positive" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
-                        עו״ש סופי (לאחר הכנסות)
-                    </div>
-                    <div class="summary-row-value neutral" id="finalBalance">₪0.00</div>
+                <div class="summary-block-value" id="balanceAfterExpenses">₪0.00</div>
+            </div>
+            <div class="summary-block">
+                <div class="summary-block-label">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="positive" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+                    עו״ש סופי (צפוי)
                 </div>
-
+                <div class="summary-block-value" id="finalBalance">₪0.00</div>
+            </div>
+        </div>
                 <div class="delete-all-container">
                     <button class="btn-delete-all-small" onclick="deleteAllData()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
