--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
                 </button>
             </div>
-
+            <div class="dropdown-container">
+                <button id="monthJumperBtn" class="month-jumper-btn" title="קפיצה לחודש">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+                </button>
+                <div class="filter-dropdown" id="monthJumperList">
+                    </div>
+            </div>
             <div class="balance-indicator-container">
                 <div class="balance-label income">
                     <span>הכנסות</span>
