new month creation window

--- a/index.html
+++ b/index.html
@@ -391,6 +391,18 @@
     </div>
 </div>
 
+        <div class="modal" id="newMonthModal">
+                 <div class="modal-content">
+                    <div class="modal-header" id="newMonthModalTitle">יצירת חודש חדש</div>
+                    <p id="newMonthModalText" style="text-align: center; margin-bottom: 24px; color: var(--text-secondary);">בחר כיצד ליצור את החודש הבא.</p>
+                    <div class="modal-actions" style="flex-direction: column;">
+                    <button class="modal-btn modal-btn-save" id="copyMonthBtn">העתק תנועות קבועות</button>
+                    <button class="modal-btn modal-btn-secondary" id="cleanMonthBtn">צור חודש ריק</button>
+                    <button class="modal-btn modal-btn-cancel" id="cancelNewMonthBtn">ביטול</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
